# BiblioTracker

./: README.md
BiblioTracker/: BibliographyManager.cpp  BibliographyManager.h  BibliographyRecord.cpp  BibliographyRecord.h  CMakeLists.txt  Color.cpp  Color.h  DateChecker.cpp  DateChecker.h  main.cpp
